# kivoll_worker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  local.Dockerfile  pyproject.toml
.github/workflows/: deploy.yml  test.yml
deploy/: .dockerignore  .env.admin.example  .env.docker  .env.example  .env.worker.example  Dockerfile  docker-compose.test.yml  docker-compose.yml  healthcheck.sh
deploy/common/initdb/: 01_create_databases.sh
deploy/db/: Makefile  docker-compose.yml
deploy/db/initdb/: 01_create_databases.sh  02_users.sh
deploy/initdb/: 02_users.sh
deploy/local/: Dockerfile  docker-compose.yml
deploy/prod/: Dockerfile  docker-compose.yml
docs/source/: conf.py  deploy.rst  development.rst  index.rst  kletterzentrum.rst  weather.rst
docs/source/api/: index.rst
src/kivoll_worker/: __init__.py  predict.py  scheduler.py  scraper.py
src/kivoll_worker/common/: __init__.py  arguments.py  config.py  failure.py
src/kivoll_worker/defaults/: config.default.json  errors.default.json
src/kivoll_worker/scrape/: __init__.py  kletterzentrum.py  session.py  weather.py
src/kivoll_worker/storage/: __init__.py
src/kivoll_worker/storage/migrations/: 0001_initial_weather.sql  0002_initial_kletterzentrum.sql
tests/: conftest.py  test_argparse.py  test_config_errors.py  test_docker.py  test_kletterzentrum.py  test_kletterzentrum_parse.py  test_niquest_sessions.py  test_scheduler_heartbeat.py  test_scheduler_reconcile.py  test_scraper.py  test_scraper_targets.py  test_storage_migrations.py  test_weather.py  test_weather_insert.py  test_weather_insert_postgres.py
tests/docker/: test_docker.sh
