[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
kivoll_worker = ["py.typed", "defaults/*.json", "storage/migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "database: tests that require a Postgres database",
    "integration: tests build the docker image",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]

[tool.coverage.run]
source = ["src/kivoll_worker"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 0

[project]
name = "kivoll_worker"
dynamic = ["version"]
authors = [
    { name = "Qrashi", email = "fritz@vibe.ac" },
]
description = "Analyze occupation data from Kletterzentrum Innsbruck"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "apscheduler>=3.11.2",
    "argparse>=1.4.0",
    "cliasi>=0.4.2",
    "numpy>=2.2.6",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "singlejson>=0.5.2",
    "sqlalchemy>=2.0.45",
    "psycopg[binary]>3.1",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ignyteX-Labs/kivoll_worker"
Issues = "https://github.com/ignyteX-Labs/kivoll_worker/issues"
Documentation = "https://ignytex-labs.github.io/kivoll_worker/"

[project.scripts]
kivoll-schedule = "kivoll_worker.scheduler:main"
kivoll-scrape = "kivoll_worker.scraper:main"
kivoll-predict = "kivoll_worker.predict:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kivoll_worker*"]

[tool.setuptools_scm]
write_to = "src/kivoll_worker/__about__.py"
fallback_version = "0+unknown"

[dependency-groups]
test = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "pytest-cov>=7.0.0",
    "testcontainers[postgres]>=4.13.0",
    "python-dotenv>=1.2.1",
]
docs = [
    "sphinx-substitution-extensions>=2025.12.15",
    "sphinx>=7",
    "furo>=2024.1.29",
]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    "pre-commit>=4.5.1",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
exclude = ["**/__about__.py", "docs"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # use of assert
    "PLR2004", # magic values
    "D", # docstrings
    "E501"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "openmeteo_sdk",
    "openmeteo_sdk.*",
]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
    "apscheduler",
    "apscheduler.*",
]
ignore_missing_imports = true
